# sports_hub_cpp_skeleton

./: .env.example  .gitignore  README.md  Takeaways.md  Task1.md  Task2.md  Task3.md  Task4.md  Task5.md  Thoughts.md  docker-compose.yml
auth_service/: CMakeLists.txt  Dockerfile
auth_service/config/: config.properties
auth_service/src/: cpp_auth_service.cpp  main.cpp
auth_service/src/Application/: AuthServiceApp.cpp  AuthServiceApp.h
auth_service/src/Domain/: Auth.cpp  Auth.h  JwtToken.cpp  JwtToken.h  TokenGenerator.cpp  TokenGenerator.h
auth_service/src/Infrastructure/: Database.h  UserRepository.h
auth_service/src/Models/: User.h
auth_service/src/Presentation/: AuthHandlerFactory.cpp  AuthHandlerFactory.h  OptionsHandler.cpp  OptionsHandler.h  SignInHandler.cpp  SignInHandler.h  SignOutHandler.cpp  SignOutHandler.h  UsersHandler.cpp  UsersHandler.h
backend_service/: CMakeLists.txt  Dockerfile
backend_service/src/: cpp_backend_service.cpp
db/: init.sql
nginx/: nginx.conf
services/baseService/: CMakeLists.txt
services/baseService/docs/: instructions.md
services/baseService/include/: BaseService.h
services/baseService/src/: BaseService.cpp  main.cpp
services/baseService/tests/: BaseServiceTests.cpp
